--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,182 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+main section {
+  padding: 1rem 2rem;
+}
+.left-side {
+  flex-basis: 4%;
+  border-right: 0.5px solid rgb(204, 204, 204);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.left-side .logo-title {
+  color: var(--black-color);
+  margin-bottom: 4rem;
+  font-size: 2rem;
+}
+.circle {
+  background-color: var(--black-color);
+  width: 3.3rem;
+  height: 3.3rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+}
+.circle span {
+  background-color: #fff;
+  width: 30px;
+  height: 4.5px;
+  border-radius: 5px;
+  transition: transform 0.5s;
+}
+.circle span:nth-child(1) {
+  transform: translateY(50%);
+}
+.circle span:nth-child(2) {
+  transform: rotate(90deg);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+/* circle's span transition */
+.circle.opened span:nth-child(1) {
+  transform: rotate(45deg);
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.circle.opened span:nth-child(2) {
+  transform: rotate(124deg);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.color-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 1.7rem;
+  height: 0;
+  transition: height 1.6s;
+}
+
+.color-container li {
+  transform: scale(0);
+  transition: transform 1s;
+}
+.color-container.opened li {
+  transform: scale(1);
+}
+
+.color-container.opened {
+  height: 250px;
+}
+.color-container.opened li {
+  animation: bounce 1s 2;
+}
+
+@keyframes bounce {
+  50% {
+    transform: translateY(-30px);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateY(0px);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.color-container li {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  /* background-color: var(--black-color); */
+  margin-bottom: 0.9rem;
+  cursor: pointer;
 }
 
-.card {
-  padding: 2em;
+.color-container li[data-color="yellow"] {
+  background-color: var(--yellow-color);
+}
+.color-container li[data-color="orange"] {
+  background-color: var(--orange-color);
+}
+.color-container li[data-color="purple"] {
+  background-color: var(--purple-color);
+}
+.color-container li[data-color="blue"] {
+  background-color: var(--blue-color);
+}
+.color-container li[data-color="green"] {
+  background-color: var(--green-color);
 }
 
-.read-the-docs {
-  color: #888;
+/* ----------RIGHT SIDE----------- */
+
+.right-side {
+  flex-basis: 75%;
+  display: flex;
+  flex-direction: column;
+  gap: 3.4rem;
+}
+
+
+
+/* ----------TEXT-AREA---------- */
+
+.txt-btn-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.write-container {
+  background-color: #f7f7f7;
+  max-width: 500px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 4px;
+}
+.write-container textarea {
+  border: none;
+  resize: vertical;
+  width: 400px;
+  outline: none;
+  padding: .7rem 1rem;
+  font-size: 1rem;
+  border-radius: 7px;
+}
+.btn-cont button {
+  background-color: var(--black-color);
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: .8rem 1.2rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: .9rem;
+}
+/* ----------NOTE DIV------ */
+.note {
+  background-color: var(--orange-color);
+  max-width: 300px;
+  padding: 1.5rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.text {
+  font-size: 1.1rem;
+  font-weight: 400;
+  line-height: 1.4;
+}
+.text-info {
+  display: flex;
+  justify-content: space-between;
+}
+.text-info * {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
 }
