--- a/src/App.css
+++ b/src/App.css
@@ -125,22 +125,23 @@ main section {
 
 .txt-btn-wrapper {
   display: flex;
-  justify-content: space-between;
+
 }
 
 .write-container {
   background-color: #f7f7f7;
-  max-width: 500px;
+  max-width: 700px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   border-radius: 4px;
+  margin-right: 2rem;
 }
 .write-container textarea {
   border: none;
   resize: vertical;
-  width: 400px;
+  width: 600px;
   outline: none;
   padding: .7rem 1rem;
   font-size: 1rem;
@@ -156,6 +157,36 @@ main section {
   cursor: pointer;
   font-size: .9rem;
 }
+
+
+/* ------------- GOOGLE BUTTON */
+.signIn-container {
+  margin-inline: auto;
+  margin-block: auto;
+}
+
+/* ---------SIGN OUT========= */
+.log-out {
+  background-color: var(--black-color);
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: .8rem 1.2rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: .9rem;
+
+}
+
+/* ----------PHOTO-IMG */
+.photo {
+  width: 53px;
+  height: 53px;
+  border-radius: 50%;
+}
+
+
+
 /* ----------NOTE DIV------ */
 .note {
   background-color: var(--orange-color);
